fix alignment of card items

--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -647,8 +647,8 @@ body > footer {
 body.home .features .card {
   display: flex ;
   flex-flow: column nowrap;
-  justify-content: center;
-  align-content: center;
+  justify-content: flex-start;
+  align-content: flex-start;
   align-items: stretch;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
@@ -800,8 +800,8 @@ body.home .target-users .target-user.card .info {
 body.home .target-users .target-user.card:nth-of-type(2n+1) {
   display: flex ;
   flex-flow: column nowrap;
-  justify-content: center;
-  align-content: center;
+  justify-content: flex-start;
+  align-content: flex-start;
   align-items: stretch;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
@@ -854,8 +854,8 @@ body.home .target-users .target-user.card:nth-of-type(2n+1) .info {
 body.home .target-users .target-user.card:nth-of-type(2n) {
   display: flex ;
   flex-flow: column nowrap;
-  justify-content: center;
-  align-content: center;
+  justify-content: flex-start;
+  align-content: flex-start;
   align-items: stretch;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
@@ -909,8 +909,8 @@ body.home .target-users .target-user.card:nth-of-type(2n) .info {
   body.home .target-users .target-user.card:nth-of-type(1n) {
     display: flex ;
     flex-flow: column nowrap;
-    justify-content: center;
-    align-content: center;
+    justify-content: flex-start;
+    align-content: flex-start;
     align-items: stretch;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
@@ -995,8 +995,8 @@ body.about .our-team .team-members.wrapper {
 body.about .our-team .team-member.card {
   display: flex ;
   flex-flow: column nowrap;
-  justify-content: center;
-  align-content: center;
+  justify-content: flex-start;
+  align-content: flex-start;
   align-items: stretch;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
